<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backGround"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:background="@drawable/cafe"
        android:contentDescription="@string/credits"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/WelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:shadowColor="@android:color/black"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="2"
        android:text="@string/welcome_message"
        android:textColor="#aeea00"
        android:textSize="16sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/WelcomeText"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/textOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@android:color/black"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="2"
            android:text="@string/businessName"
            android:textAllCaps="true"
            android:textColor="#aeea00"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:shadowColor="@android:color/black"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="2"
            android:text="@string/business_type"
            android:textColor="#aeea00"
            android:textSize="20sp"
            android:textStyle="italic" />

    </LinearLayout>


    <TextView
        android:id="@+id/textThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textFour"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:shadowColor="@android:color/black"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="2"
        android:text="@string/address"
        android:textColor="#aeea00"
        android:textSize="15sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:autoLink="phone"
        android:shadowColor="@android:color/black"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="2"
        android:text="@string/phoneNumber"
        android:textColor="#aeea00"
        android:textColorLink="#69f0ae"
        android:textSize="15sp"
        android:textStyle="italic" />


</RelativeLayout>
